...
        }
        .padding()
    }
    
    private var searchBar: some View {
        TextField("Buscar ciudad...", text: $viewModel.textInput)
            .accessibilityIdentifier("SearchBar")
            .onChange(of: viewModel.textInput) {
                viewModel.filterByTextInput()
            }
            .textFieldStyle(.roundedBorder)
    }
    
...
        }
        .listStyle(PlainListStyle())
    }
    
    private var favouriteFilterToggle: some View {
        Toggle("Mostrar solo favoritos", isOn: $viewModel.favouriteFilterToggle)
            .accessibilityIdentifier("FavoritesToggle")
            .onChange(of: viewModel.favouriteFilterToggle) {
                viewModel.toggleFavouritesTapped()
            }
    }
}

...
